--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "require": {
         "izniburak/router": "^2.2",
-        "jenssegers/blade": "^1.4"
+        "jenssegers/blade": "^1.4",
+        "vlucas/valitron": "^1.4"
     },
     "autoload": {
         "psr-4": {
