--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,15 @@
     "require": {
         "izniburak/router": "^2.2",
         "jenssegers/blade": "^1.4",
-        "vlucas/valitron": "^1.4"
+        "vlucas/valitron": "^1.4",
+        "filp/whoops": "^2.12",
+        "arrilot/dotenv-php": "^2.0"
     },
     "autoload": {
         "psr-4": {
             "App\\": "./app",
             "Core\\": "./core"
-        }
+        },
+        "files": ["./app/helpers.php"]
     }
 }
