carbon paketi eklendi

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "vlucas/valitron": "^1.4",
         "filp/whoops": "^2.12",
         "arrilot/dotenv-php": "^2.0",
-        "illuminate/database": "^8.40"
+        "illuminate/database": "^8.40",
+        "nesbot/carbon": "^2.46"
     },
     "autoload": {
         "psr-4": {
