--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
         }
     ],
     "require": {
-        "izniburak/router": "^2.2",
         "jenssegers/blade": "^1.4",
         "vlucas/valitron": "^1.4",
         "filp/whoops": "^2.12",
@@ -16,13 +15,14 @@
         "illuminate/database": "^8.40",
         "nesbot/carbon": "^2.46",
         "aura/session": "^2.1",
-        "verot/class.upload.php": "^2.1"
+        "verot/class.upload.php": "^2.1",
+        "izniburak/router": "^2.3"
     },
     "autoload": {
         "psr-4": {
             "App\\": "./app",
             "Core\\": "./core"
         },
-        "files": ["./app/helpers.php"]
+        "files": ["./app/helpers.php", "./core/helpers.php"]
     }
 }
